--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Aqui vamos hacer un blog post</h1>
-    <p>Este es el parrafo de inicio</p>
+    <div id="container">
+        <div id="post">
+            <h1>Aqui vamos hacer un blog post</h1>
+            <p>Este es el parrafo de inicio donde se pueden hacer cosas increibles con las ramas</p>
+        </div>
+    </div>
 </body>
 </html>
