--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <div id="container">
+        <div id="cabecera">
+            Cabecera
+        </div>
         <div id="post">
             <h1>Aqui vamos hacer un blog post</h1>
             <p>Este es el parrafo de inicio donde se pueden hacer cosas increibles con las ramas</p>
