Agregado el contenido del blog

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <div id="post">
             <h1>Aqui vamos hacer un blog post</h1>
             <p>Este es el parrafo de inicio donde se pueden hacer cosas increibles con las ramas</p>
+            <p>Los blogs son la mejor forma de compartir infor</p>
         </div>
     </div>
 </body>
