--- a/index.html
+++ b/index.html
@@ -5,18 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Pokedex</title>
 </head>
 <body>
-    <div id="container">
-        <div id="cabecera">
-            Hiperblog
+
+   <form action="" onsubmit="searchPokemon(event)">
+        <input type="text" name="pokemon" autocomplete="off">
+   </form>
+   <div data-poke-card class="poke-card">
+        <div data-poke-name>Pokedex</div>
+        <div data-poke-img-container class="img-container">
+            <img data-poke-img class="poke-img" src="/pokemon.jpg" />
         </div>
-        <div id="post">
-            <h1>Aqui vamos hacer un blog post</h1>
-            <p>Este es el parrafo de inicio donde se pueden hacer cosas increibles con las ramas</p>
-            <p>Los blogs son la mejor forma de compartir infor</p>
-        </div>
-    </div>
+        <div data-poke-id></div>
+        <div data-poke-types class="poke-types"></div>
+        <div data-poke-stats class="poke-stats"></div>
+   </div>
+   <script src="/api.js"></script>
 </body>
 </html>
